Authentication App initial commit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # Compiled class file
 *.class
 
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
 # Log file
 *.log
 
