--- a/AuthenticationService/src/main/resources/application.yml
+++ b/AuthenticationService/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     platform: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/authdb
+    url: jdbc:postgresql://localhost:5432/authdb #change from localhost so container doesn't get confused
     username: backend
     password: backend
     initialization-mode: always
