--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,12 +24,10 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
   #AuthService
-  bookpublisher:
+  authenticationservice:
     build: ./AuthenticationService
     container_name: authenticationservice
-    depends_on:
-      - broker
+    ports:
+      - "8181:8080"
     environment:
       SPRING_PROFILES_ACTIVE: 'production'
-      DEVTIRO_KAFKA_TOPIC: 'books.published'
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: 'broker:29092'
