Adding React frontend UI for authentication.

--- a/AuthenticationService/src/main/resources/application.yml
+++ b/AuthenticationService/src/main/resources/application.yml
@@ -12,4 +12,4 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
     hibernate:
-      ddl-auto: create
+      #ddl-auto: create
