--- a/RecipeApplication/pom.xml
+++ b/RecipeApplication/pom.xml
@@ -73,6 +73,11 @@
 			<version>20240303</version>
 		</dependency>
 
+		<!-- kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
