--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,3 +44,16 @@ services:
       SPRING_PROFILES_ACTIVE: 'production'
       DEVTIRO_KAFKA_TOPIC: 'recipe.published'
       SPRING_KAFKA_BOOTSTRAP_SERVERS: 'broker:29092'
+
+  #CookBookApplication
+  cookbookapplication:
+    build: ./CookBookApplication
+    container_name: cookbookapplication
+    depends_on:
+      - broker
+    ports:
+      - "8383:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: 'production'
+      DEVITRO_KAFKA_TOPIC: 'recipe.clone'
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: 'broker:29092'
