Added user preferences to AuthenticationService.  Also changed JWT algorithm from HMAC to SHA256 with public and private keys so that microservices can perform public key validation of tokens.

--- a/CookBookApplication/src/main/resources/application.yml
+++ b/CookBookApplication/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
     hibernate:
-      ddl-auto:
+      ddl-auto: create
   kafka:
     consumer:
       group-id: cookbook-application
