--- a/AuthenticationService/src/main/resources/application.yml
+++ b/AuthenticationService/src/main/resources/application.yml
@@ -1,10 +1,8 @@
-security.jwt.token.secret-key: my-secret-CookBook-key
-
 spring:
   datasource:
     platform: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/authdb #change from localhost so container doesn't get confused
+    url: jdbc:postgresql://10.0.4.58:5432/authdb #change from localhost so container doesn't get confused
     username: backend
     password: backend
     initialization-mode: always
@@ -12,4 +10,4 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
     hibernate:
-      #ddl-auto: create
+      ddl-auto: create
