--- a/CookBookApplication/.gitignore
+++ b/CookBookApplication/.gitignore
@@ -29,5 +29,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### RSA Keys ###
+/src/main/resources/keys/**
+
 ### VS Code ###
 .vscode/
