--- a/RecipeApplication/src/main/resources/application.yml
+++ b/RecipeApplication/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     platform: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/recipedb #change to ip from localhost so container doesn't get confused
+    url: jdbc:postgresql://10.0.4.58:5432/recipedb #change to ip from localhost so container doesn't get confused
     username: backend
     password: backend
     initialization-mode: always
@@ -10,4 +10,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
     hibernate:
-      #ddl-auto: create
+      ddl-auto: create
+  kafka:
+    consumer:
+      group-id: recipe-application
