--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
@@ -57,3 +56,16 @@ services:
       SPRING_PROFILES_ACTIVE: 'production'
       DEVITRO_KAFKA_CLONE_TOPIC: 'recipe.clone'
       SPRING_KAFKA_BOOTSTRAP_SERVERS: 'broker:29092'
+
+  #GatewayService
+  gatewayservice:
+    build: ./Gateway
+    container_name: gateway
+    depends_on:
+      - authenticationservice
+      - recipeservice
+      - cookbookapplication
+    ports:
+      - "8081:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: 'production'
