--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -6,3 +6,18 @@ spring:
       httpclient:
         connect-timeout: 1000
         response-timeout: 5s
+      globalcors:
+        cors-configurations:
+          '[/**]': # Apply to all routes
+            allowedOrigins:
+              - "http://localhost:5173"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - PATCH
+              - DELETE
+              - OPTIONS
+            allowedHeaders:
+              - "*"
+            allowCredentials: true
