--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -21,3 +21,7 @@ spring:
             allowedHeaders:
               - "*"
             allowCredentials: true
+
+auth:
+  service:
+    url: http://authenticationservice:8080 #change to ip from localhost so container doesn't get confused
