Adding redis rate limiter to the gateway to limit traffic rates.

--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -1,6 +1,13 @@
+logging:
+  level:
+    org.springframework.cloud.gateway.filter.ratelimit: DEBUG
+
 spring:
   application:
     name: Gateway
+  redis:
+    host: ${SPRING_REDIS_HOST:redis}
+    port: ${SPRING_REDIS_PORT:6379}
   cloud:
     gateway:
       httpclient:
