--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
+  #Redis
+  redis:
+    container_name: redis
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+
   #AuthService
   authenticationservice:
     build: ./AuthenticationService
@@ -62,6 +69,7 @@ services:
     build: ./Gateway
     container_name: gateway
     depends_on:
+      - redis
       - authenticationservice
       - recipeservice
       - cookbookapplication
@@ -69,3 +77,5 @@ services:
       - "8081:8080"
     environment:
       SPRING_PROFILES_ACTIVE: 'production'
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
