--- a/AuthenticationService/src/main/resources/application.yml
+++ b/AuthenticationService/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto:
+  redis:
+    host: ${SPRING_REDIS_HOST:redis}
+    port: ${SPRING_REDIS_PORT:6379}
 
 server:
   servlet:
