--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,19 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
+  #mongoDB
+  mongodb:
+    image: mongo:7.0.5
+    container_name: cookbook-mongodb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongoSA
+      MONGO_INITDB_ROOT_PASSWORD: mongoSA
+      MONGO_INITDB_DATABASE: cookbookdb
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
   #Redis
   redis:
     container_name: redis
@@ -57,6 +70,7 @@ services:
     container_name: cookbookapplication
     depends_on:
       - broker
+      - mongodb
     expose:
       - "8383"
     environment:
@@ -79,3 +93,7 @@ services:
       SPRING_PROFILES_ACTIVE: 'production'
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: 6379
+
+volumes:
+  mongo-data:
+    driver: local
