--- a/CookBookApplication/src/main/resources/application.yml
+++ b/CookBookApplication/src/main/resources/application.yml
@@ -1,16 +1,7 @@
 spring:
-  datasource:
-    platform: postgres
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/cookbookdb #change to ip from localhost so container doesn't get confused
-    username: backend
-    password: backend
-    initialization-mode: always
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: false
-    hibernate:
-      ddl-auto:
+  data:
+    mongodb:
+        uri: mongodb://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@mongodb:27017/cookbookdb?authSource=admin
   kafka:
     consumer:
       group-id: cookbook-application
@@ -18,7 +9,3 @@ spring:
 server:
   servlet:
     context-path: /v1/cb
-
-auth:
-  service:
-    url: http://authenticationservice:8080 #change to ip from localhost so container doesn't get confused
